; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/ax25/extr_ax25_ds_timer.c_ax25_ds_t3timer_expiry.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/ax25/extr_ax25_ds_timer.c_ax25_ds_t3timer_expiry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AX25_DISC = common dso_local global i32 0, align 4
@AX25_POLLON = common dso_local global i32 0, align 4
@AX25_COMMAND = common dso_local global i32 0, align 4
@ETIMEDOUT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ax25_ds_t3timer_expiry(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = load i32, i32* @AX25_DISC, align 4
  %5 = load i32, i32* @AX25_POLLON, align 4
  %6 = load i32, i32* @AX25_COMMAND, align 4
  %7 = call i32 @ax25_send_control(i32* %3, i32 %4, i32 %5, i32 %6)
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @ax25_dama_off(i32* %8)
  %10 = load i32*, i32** %2, align 8
  %11 = load i32, i32* @ETIMEDOUT, align 4
  %12 = call i32 @ax25_disconnect(i32* %10, i32 %11)
  ret void
}

declare dso_local i32 @ax25_send_control(i32*, i32, i32, i32) #1

declare dso_local i32 @ax25_dama_off(i32*) #1

declare dso_local i32 @ax25_disconnect(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
